--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,8 @@
     <color name="babypink">#ffcccc</color>
     <color name="brown">#ff9900</color>
     <color name="colorProfile">#3B4041</color>
+    <color name="darkgray">#A9A9A9</color>
+    <color name="sendercolor">#A0179E</color>
 
 
 
