--- a/app/src/main/res/drawable-v24/backgroundlgn.xml
+++ b/app/src/main/res/drawable-v24/backgroundlgn.xml
@@ -14,7 +14,7 @@
 
     <solid
 
-        android:color="#00BFFF	"
+        android:color="#00bfff"
         android:background="@drawable/water"
         />
 
