--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -56,7 +56,7 @@
                 android:layout_height="60dp"
                 android:layout_marginTop="30dp"
                 android:layout_centerHorizontal="true"
-                android:background="@drawable/backgroundlgn"
+                android:background="@drawable/background_login"
                 android:layout_below="@+id/resetpass_enteremail"
                 android:text="Send email"
                 android:textColor="@color/backgroundcolor"
