--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -17,7 +17,7 @@
         android:id="@+id/setup_profile_image"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@drawable/person"
+        android:src="@drawable/profile_pic"
         android:layout_marginTop="5dp"
         android:layout_centerHorizontal="true"
         app:civ_border_color="#FF000000"
@@ -31,7 +31,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="130dp"
         android:layout_height="300dp"
-        android:background="@drawable/backgroundlgn">
+        android:background="@drawable/background_login">
 
 
         <EditText
