--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -6,125 +6,56 @@
     android:layout_height="match_parent"
     android:paddingBottom="50dp"
     android:paddingLeft="50dp"
+    android:background="@android:color/holo_blue_light"
     android:paddingRight="50dp"
     android:paddingTop="50dp"
-    tools:context=".Login">
+    tools:context=".Sign_up">
 
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Choose where to register"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:layout_centerHorizontal="true"/>
 
     <RelativeLayout
-        android:id="@+id/reglayout"
+        android:layout_marginTop="@android:dimen/app_icon_size"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:background="@drawable/backgroundlgn">
+        android:layout_height="wrap_content">
 
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="128dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="19dp"
-            android:gravity="center"
-            android:text="Sign Up"
-            android:textColor="#fff"
-            android:textSize="30dp"
-            android:textStyle="bold" />
+    <Button
+        android:id="@+id/userreg_nav"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:text="USER"
+        android:textSize="18sp"
+        android:textColor="@android:color/holo_blue_light"
 
+        android:padding="11dp"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/background_buttons"/>
 
-        <EditText
-            android:id="@+id/etEmail"
-            android:drawableLeft="@drawable/ic_email_black_24dp"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="73dp"
-            android:ems="10"
-            android:hint="Email"
-            android:inputType="textPersonName"
-            android:maxLines="1"
-            android:textColorHint="#fff" />
-
-        <EditText
-            android:id="@+id/etPassword"
-            android:drawableLeft="@drawable/ic_lock_black_24dp"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="125dp"
-            android:ems="10"
-            android:hint="Password"
-            android:textColorHint="#fff"
-            android:inputType="textPassword"/>
-
-        <EditText
-            android:id="@+id/etconfirmPassword"
-            android:drawableLeft="@drawable/ic_lock_black_24dp"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="170dp"
-            android:ems="10"
-            android:hint=" ConfirmPassword"
-            android:textColorHint="#fff"
-            android:inputType="textPassword"/>
-
+    <Button
+        android:id="@+id/technicianreg_nav"
+        android:layout_below="@+id/userreg_nav"
+        android:layout_marginTop="50dp"
+        android:text="TECHNICIAN"
+        android:textSize="18sp"
+        android:textColor="@android:color/holo_blue_light"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:background="@drawable/background_buttons"/>
 
     </RelativeLayout>
 
 
 
-
-    <Button
-        android:id="@+id/btreg"
-        android:layout_width="match_parent"
-        android:layout_centerHorizontal="true"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/reglayout"
-        android:layout_marginStart="46dp"
-        android:layout_marginLeft="46dp"
-        android:layout_marginTop="50dp"
-        android:onClick="Onregister"
-        android:autoText="true"
-        android:background="@drawable/background_login"
-        android:text="Register"
-        android:textColor="@color/blue"
-        tools:autoText="true" />
-
-    <Button
-        android:id="@+id/btLogin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/btreg"
-        android:layout_marginLeft="46dp"
-        android:layout_marginTop="3dp"
-        android:background="@drawable/background_sign_up"
-        android:onClick="Onlogin"
-        android:text="Login"
-        android:textColor="@color/blue" />
-
-
-
-
-
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="52dp"
-        android:layout_height="40dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="2dp"
-        android:layout_x="65dp"
-        android:layout_y="24dp"
-        android:indeterminate="true"
-        android:progressDrawable="@drawable/circle_progress_view"
-        android:theme="@style/ProgressTheme" />
 
 
 </RelativeLayout>
