--- a/app/src/main/res/layout/all_post_layout.xml
+++ b/app/src/main/res/layout/all_post_layout.xml
@@ -83,6 +83,8 @@
                             android:textSize="13sp"/>
 
 
+
+
                 </LinearLayout>
 
 
@@ -109,6 +111,28 @@
             android:layout_margin="3dp"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop" />
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="10dp">
+
+
+            <ImageButton
+                android:id="@+id/comment_button2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_chat_black_24dp"
+                android:layout_marginLeft="150dp"
+                android:baselineAlignBottom="false"/>
+
+        </LinearLayout>
+
+
+
 
 
     </LinearLayout>
