--- a/app/src/main/res/layout/activity_apply_water.xml
+++ b/app/src/main/res/layout/activity_apply_water.xml
@@ -106,7 +106,7 @@
                 android:layout_marginTop="6dp"
                 android:layout_marginRight="40dp"
                 android:background="@drawable/inputs"
-                android:hint="County"
+                android:hint="Sub-county"
                 android:padding="12dp"
                 android:textColor="@color/cardview_dark_background"
                 android:textSize="16sp"
@@ -122,7 +122,7 @@
                 android:layout_marginTop="6dp"
                 android:layout_marginRight="40dp"
                 android:background="@drawable/inputs"
-                android:hint="Town"
+                android:hint="Estate"
                 android:padding="12dp"
                 android:textColor="@color/cardview_dark_background"
                 android:textSize="16sp"
