--- a/app/src/main/res/layout/activity_water_status.xml
+++ b/app/src/main/res/layout/activity_water_status.xml
@@ -29,66 +29,137 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:padding="10dp"
-                android:text=" Water Apply Status"
+                android:text=" Water Application Status"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="22sp"
                 android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/status"
+            <LinearLayout
+                android:id="@+id/status-l"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/status_water_title"
-                android:layout_marginLeft="40dp"
-                android:layout_marginTop="6dp"
-                android:layout_marginRight="40dp"
-                android:hint="Status :"
-                android:padding="12dp"
-                android:textColor="@color/cardview_dark_background"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+                android:layout_below="@+id/status_water_title">
 
-            <TextView
-                android:id="@+id/status_name"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginTop="6dp"
+                    android:layout_marginRight="40dp"
+                    android:hint="Status :"
+                    android:padding="12dp"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/status"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="6dp"
+                    android:layout_marginRight="40dp"
+                    android:hint="status "
+                    android:padding="12dp"
+                    android:textColor="@color/blue"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/status_name-l"
+                android:layout_below="@+id/status-l"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginTop="6dp"
+                    android:layout_marginRight="40dp"
+                    android:hint="Name :"
+                    android:padding="12dp"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/status_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="6dp"
+                    android:layout_marginRight="40dp"
+                    android:hint="name "
+                    android:padding="12dp"
+                    android:textColor="@color/blue"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/status_email-l"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/status"
-                android:layout_marginLeft="40dp"
-                android:layout_marginTop="6dp"
-                android:layout_marginRight="40dp"
-                android:hint="Name :"
-                android:padding="12dp"
-                android:textColor="@color/cardview_dark_background"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+                android:layout_below="@+id/status_name-l">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginTop="6dp"
+                    android:layout_marginRight="40dp"
+                    android:hint="Email :"
+                    android:padding="12dp"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/status_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="6dp"
+                    android:layout_marginRight="40dp"
+                    android:hint="email "
+                    android:padding="12dp"
+                    android:textColor="@color/blue"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/status_email"
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/status_date-l"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/status_name"
-                android:layout_marginLeft="40dp"
-                android:layout_marginTop="6dp"
-                android:layout_marginRight="40dp"
-                android:hint="Email :"
-                android:padding="12dp"
-                android:textColor="@color/blue"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+                android:layout_below="@+id/status_email-l">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginTop="6dp"
+                    android:layout_marginRight="40dp"
+                    android:hint="Date :"
+                    android:padding="12dp"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/status_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="6dp"
+                    android:layout_marginRight="40dp"
+                    android:hint="date"
+                    android:padding="12dp"
+                    android:textColor="@color/blue"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/status_date"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/status_email"
-                android:layout_marginLeft="40dp"
-                android:layout_marginTop="6dp"
-                android:layout_marginRight="40dp"
-                android:hint="Date of application :"
-                android:padding="12dp"
-                android:textColor="@color/blue"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+            </LinearLayout>
+
+
 
 
         </RelativeLayout>
