--- a/app/src/main/res/layout/activity_welcomer.xml
+++ b/app/src/main/res/layout/activity_welcomer.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,16 +7,25 @@
     android:layout_height="match_parent"
     tools:context=".WelcomeActivity">
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/imageView"
+        android:src="@drawable/splash"
+        android:layout_width="220dp"
+        android:layout_height="220dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="100dp"
+        app:srcCompat="@drawable/splash" />
+
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="212dp"
+        android:layout_height="wrap_content"
         android:text="Welcome"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/imageView"
         android:textSize="42dp"
-        android:textColor="#ffff"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="40dp"
+        android:textColor="#ffff"/>
 
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
