--- a/app/src/main/res/layout/chat_custom_bar.xml
+++ b/app/src/main/res/layout/chat_custom_bar.xml
@@ -14,7 +14,8 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
         android:layout_marginRight="15dp"
-        android:cropToPadding="true"/>
+        android:cropToPadding="true"
+        android:layout_alignParentRight="true" />
 
     <TextView
         android:id="@+id/custom_profile_name"
@@ -25,7 +26,8 @@
         android:textColor="@android:color/background_light"
         android:textSize="18sp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true" />
 
     <TextView
         android:id="@+id/custom_user_last_seen"
@@ -37,6 +39,7 @@
         android:textColor="@android:color/background_light"
         android:textSize="16sp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true" />
 
 </RelativeLayout>
