--- a/app/src/main/res/layout/message_layout_of_users.xml
+++ b/app/src/main/res/layout/message_layout_of_users.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -22,7 +23,8 @@
         android:text="sender message"
         android:textColor="@color/backgroundcolor"
         android:textSize="14dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:layout_alignParentRight="true" />
 
     <TextView
         android:id="@+id/receiver_message_text"
@@ -36,7 +38,9 @@
         android:text="receiver message"
         android:textColor="@color/backgroundcolor"
         android:textSize="14dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:layout_toRightOf="@+id/message_profile_image"
+        tools:ignore="NotSibling" />
 
 
 
